# verus-mandelbrot

./: Cargo.toml  README.md  mandelbrot_cpu.ppm  run.sh
docs/: HANDOFF.md  exec-to-spec-chain-guide.md  exec-verification-roadmap.md  loop-extraction-plan.md  pink-tile-fix-plan.md  remaining-work.md  session-2026-04-06-summary.md  session-2026-04-06b-summary.md  session-2026-04-07-summary.md  session-2026-04-07b-summary.md  session-2026-04-10-summary.md  session-2026-04-12-13.md  session-2026-04-14.md
profiler/: Cargo.toml
src/: complex_interval.rs  gpu_kernel.rs  gpu_kernel_n4.rs  gpu_mandelbrot_entry.rs  gpu_mandelbrot_kernel.rs  gpu_perturb_kernel.rs  gpu_perturbation_entry.rs  gpu_perturbation_proofs.rs  lib.rs  mandelbrot.rs  perturbation.rs  runtime_complex_interval.rs  runtime_mandelbrot.rs  runtime_perturbation.rs  runtime_series_approximation.rs  sa_compute.rs  series_approximation.rs  test_kernel_bufslice.rs
web/: generate_shaders.sh  index.html  mandelbrot.js  mandelbrot_perturbation.wgsl  mandelbrot_perturbation_n16.wgsl  mandelbrot_perturbation_n32.wgsl  mandelbrot_perturbation_n4.wgsl  mandelbrot_perturbation_n64.wgsl  mandelbrot_perturbation_n8.wgsl  mandelbrot_verified.wgsl
